--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.3.14</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
+
 
 
     <dependency>
